--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL               = "https://www.nwnu.org.cn/"
 languageCode          = "zh-CN"
-title                 = "西北师范大学公益导航 | NWNU的好导航"
+title                 = "西北师范大学网络导航枢纽 | NWNU的好导航"
 theme                 = "WebStack-Hugo"
 preserveTaxonomyNames = true
 disablePathToLower    = true
@@ -15,7 +15,7 @@ publishDir            = "docs"					# 站点静态文件保存目录
     about         = "https://www.nwnu.org.cn/"	# 左侧导航栏的"关于导航"页面(./about)
     repository    = "https://www.nwnu.org.cn/"  
     enablePreLoad = true					# 网站完全打开前预加载动画
-    textPreLoad   = "西北师范大学公益导航 稍等片刻"				# 预加载的动画文字, 只有当enablePreLoad=true时生效
+    textPreLoad   = "稍等片刻"				# 预加载的动画文字, 只有当enablePreLoad=true时生效
     expandSidebar = true					# 默认展开左侧边导航栏
     logosPath     = "assets/images/logos"			# 网站每个导航地址logo存放地址
     defaultLogo   = "assets/images/logos/default.webp"		# logo图片资源不存在或者错误时, 默认显示的logo; 该参数如为空,将会一直加载对应的logo,直至成功
